# serializer version: 1
# name: test_all_entities[climate.aircon_said1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'off',
        'auto',
        'low',
        'medium',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'horizontal',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aircon_said1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'said1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[climate.aircon_said1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 80,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 15,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'off',
        'auto',
        'low',
        'medium',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aircon said1',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 425>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'horizontal',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'horizontal',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aircon_said1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_all_entities[climate.aircon_said2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'off',
        'auto',
        'low',
        'medium',
        'high',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'horizontal',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aircon_said2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 425>,
    'translation_key': None,
    'unique_id': 'said2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[climate.aircon_said2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 80,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 15,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'off',
        'auto',
        'low',
        'medium',
        'high',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aircon said2',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 425>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'horizontal',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'horizontal',
        'off',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aircon_said2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
